Danny first Actual commit; Nothing is working yet.

--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 <head>
 	<script src="GameBoard.js"></script>
 </head>
+<body id="body">
+	<div id="Game" onload="GameBoard.render(this);"></div>
+</body>
