fixed onload; Routed Code via Main; Created Pawn Class; Created Pairing Object;

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
 	<script src="GameBoard.js"></script>
+	<script src="Main.js"></script>
 </head>
-<body id="body">
-	<div id="Game" onload="GameBoard.render(this);"></div>
-</body>
+<body id="body" onload="Main.start(this);"></body>
