Added Pairing to index; Added id and colour param to cells; Added symbol to Pawn constructor;

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <head>
 	<script src="GameBoard.js"></script>
 	<script src="Main.js"></script>
+	<script src="Pairing.js"></script>
 </head>
 <body id="body" onload="Main.start(this);"></body>
