Added basic Tasks for TODO; Created GameStart Object; Sources GameStart & Pawn; Implemented GameStart into Main;

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 	<script src="GameBoard.js"></script>
 	<script src="Main.js"></script>
 	<script src="Pairing.js"></script>
+	<script src="GameStart.js"></script>
+	<script src="Pawn.js"></script>
 </head>
 <body id="body" onload="Main.start(this);"></body>
