created class bishop; created class knight; created class king; created class queen; modified Gamestart.js with new classes; added new script in index;

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 	<script src="Pairing.js"></script>
 	<script src="GameStart.js"></script>
 	<script src="Pawn.js"></script>
+	<script src="Bishop.js"></script>
+	<script src="Horse.js"></script>
 </head>
 <body id="body" onload="Main.start(this);"></body>
