--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="GameStart.js"></script>
 	<script src="Pawn.js"></script>
 	<script src="Bishop.js"></script>
-	<script src="Horse.js"></script>
+	<script src="Knight.js"></script>
+	<script src="Queen.js"></script>
+	<script src="King.js"></script>
 </head>
 <body id="body" onload="Main.start(this);"></body>
