--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<script src="Pairing.js"></script>
 	<script src="GameStart.js"></script>
 	<script src="Pawn.js"></script>
+	<script src="Rook.js"></script>
 </head>
 <body id="body" onload="Main.start(this);"></body>
